# muka

./: .gitignore  BUGFIX_NOTES.md  CLASSIFICATION_MODE_COMPARISON.md  CLASSIFICATION_PATTERNS.md  COMPLETE_BUGFIX_SUMMARY.md  CONFIGURATION_COMPLETE.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SYSTEM.md  EXAMPLES_IMPROVEMENTS.md  MCP_AUTO_LOAD.md  MCP_CLI_GUIDE.md  MCP_CSV_UPLOAD_OPTIONS.md  MCP_CSV_UPLOAD_SUMMARY.md  MCP_IMPLEMENTATION.md  MCP_QUICKSTART.md  MCP_SERVER_GUIDE.md  MCP_TOOLS_REFERENCE.md  OUTPUT_INTERFACE_GUIDE.md  PROJECT_SUMMARY.md  README.md  UNCLASSIFIED_WARNINGS.md  UNCLASSIFIED_WARNINGS_COMPLETE.md  USAGE.md  VALIDATION.md  VSCODE_UPDATE_SUMMARY.md  demo_configuration.py  demo_output_interface.py  example_mcp_usage.py  interactive_mcp_client.py  mcp_config.json  muka_config.example.toml  muka_config.toml  pyproject.toml  run_mcp_server.py  setup-mcp-client  show_examples.py  test-mcp  test_examples_command.py  test_mcp_server.py
.github/: copilot-instructions.md
mcp_server/: __init__.py  __main__.py  server.py
muka_analysis/: __init__.py  __main__.py  analyzer.py  classifier.py  cli.py  config.py  filters.py  io_utils.py  main.py  models.py  output.py  statistics.py  validation.py  validators.py
r-code/: MuKa_Betriebe_new.qmd
